====
NEWS
====

:Authors: Toshio Kuratomi
:Date: 2 Sep 2010
:Version: 0.2.x

-------
0.2.1a2
-------

* Fix exception messages that contain unicode characters

Planned
=======
* Ensure that all deprecated functions used by yum are present
: Update docs to include the new files
  - api-using-kitchen-versions.rst
    - Using kitchen.release
    - Using kitchen.*.__version_info__
  - api-text.rst::
    - Update utf8
    - Update misc?
    - Add display
    - Add kitchen.text.converters.getwriter()
* unittest kitchen.text.display.print_combining_table() ?

* (0.2.2) Add collections.DecodedDict that takes an encoding and decodes all str keys
  to unicode before doing a lookup

-------
0.2.1a1
-------

* Fix failing unittest on python-2.7
* Add iterutils module
* Update table of combining utf8 characters from python-2.7
* Speed up kitchen.text.misc.str_eq().
* docs:
  - api-i18n
  - api-exceptions
  - api-collections
  - api-iterutils
  - Add two tutorial sections for unicode
* unittests
  - kitchen.text.converters.getwriter()
  - kitchen.iterutils
  - tests for more input variations to str_eq

-----
0.2a2
-----
* Add unittests for kitchen.text.display, update kitchen.text.utf8 and
  kitchen.text.misc test coverage
* Bug fixes for python-2.3
* Some doc updates.  More to come.
* New function kitchen.text.converters.getwriter()

-----
0.2a1
-----
* Relicense to LGPLv2+
* All API versions for subpackages moved to 1.0 to comply with new guidelines
  on hacking subpackages.
* Documentation on hacking kitchen and addons
* Kitchen.text API changed (new API version 1.0)
  * Move utils.* to misc.*
  * Deprecate kitchen.text.utf8.utf8_valid in favor of
    kitchen.text.misc.byte_string_valid_encoding
    - byte_string_valid_encoding is significantly faster and a bit more generic
  * Port utf8 functions to use unicode
  * Put the unicode versions of the utf8 functions into kitchen.text.display

-----
0.1a3
-----
* Add a defaultdict implementation for pycompat25
* Add documentation